--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Computers#index</h1>
-<p>Find me in app/views/computers/index.html.erb</p>
+<h1>Listing computers</h1>
+
+<table>
+  <tr>
+  </tr>
+
+<% for computer in @computers %>
+  <tr>
+    <td><%= computer.name %></td>
+    <td><%= computer.mac %></td>
+    <td><%= computer.ip %></td>
+    <td><%= link_to 'Show', computer %></td>
+    <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
+    <td><%= link_to 'Destroy', computer, :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New computer', new_computer_path %>
