--- a/app/views/mother_boards/edit.html.erb
+++ b/app/views/mother_boards/edit.html.erb
@@ -1,12 +1,7 @@
 <h1>Editing mother_board</h1>
 
-<% form_for(@mother_board) do |f| %>
-  <%= f.error_messages %>
 
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Show', @mother_board %> |
 <%= link_to 'Back', mother_boards_path %>
