--- a/app/views/mother_boards/new.html.erb
+++ b/app/views/mother_boards/new.html.erb
@@ -1,11 +1,5 @@
 <h1>New mother_board</h1>
 
-<% form_for(@mother_board) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Back', mother_boards_path %>
