--- a/app/views/mother_boards/index.html.erb
+++ b/app/views/mother_boards/index.html.erb
@@ -6,6 +6,8 @@
 
 <% for mother_board in @mother_boards %>
   <tr>
+    <td><%= mother_board.title %></td>
+    <td><%= mother_board.serialnumber %></td>
     <td><%= link_to 'Show', mother_board %></td>
     <td><%= link_to 'Edit', edit_mother_board_path(mother_board) %></td>
     <td><%= link_to 'Destroy', mother_board, :confirm => 'Are you sure?', :method => :delete %></td>
