- Model   * added model for harddisk
- Controller
  * added controller for hardisks

- Views and Partials
  * added views and partials for hard disks

- Routes
  * added route for harddisks

- Migrate
  * added migrate for harddisks

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Listing computers</h1>
 
-<table border=1>
+<table border='1' >
   <tr>
     <td>Pc</td>
     <td>Mac</td>
     <td>Ip</td>
     <td>MBoard</td>
+    <td>Harddisk</td>
     <td colspan='3'>Actions</td>
   </tr>
 
@@ -15,6 +16,7 @@
     <td><%= computer.mac %></td>
     <td><%= computer.ip %></td>
     <td><%= computer.mother_board.title rescue nil %></td>
+    <td><%= computer.harddisk.model rescue nil %></td>
     <td><%= link_to 'Show', computer %></td>
     <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
     <td><%= link_to 'Destroy', computer, :confirm => 'Are you sure?', :method => :delete %></td>
