--- a/app/views/mother_boards/index.html.erb
+++ b/app/views/mother_boards/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Listing mother_boards</h1>
 
-<table>
+<table border='1' >
   <tr>
+    <td>Title</td>
+    <td>Serial Number</td>
+    <td>Computer</td>
+    <td colspan='3'>Actions</td>
   </tr>
 
 <% for mother_board in @mother_boards %>
