--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,4 +1,5 @@
 <ul>
   <li><a href="/computers">Computers</a></li>
   <li><a href="/mother_boards">Motherboards</a></li>
+  <li><a href="/harddisks">Hardisks</a></li>
 </ul>
