- Controllers   * add controllers cds and memories
- Model
  * add models cd and memory
  * adapted model computer

- Views
  * added views for cd and memory

- Helpers
  * added helper for cd and memory

- Routes
  * adapted routes for new paths

- Migration
  * added new migration

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -7,6 +7,8 @@
     <td>Ip</td>
     <td>MBoard</td>
     <td>Harddisk</td>
+    <td>Memory</td>
+    <td>Cd</td>
     <td colspan='3'>Actions</td>
   </tr>
 
@@ -17,6 +19,8 @@
     <td><%= computer.ip %></td>
     <td><%= computer.mother_board.title rescue nil %></td>
     <td><%= computer.harddisk.model rescue nil %></td>
+    <td><%= computer.memory.model rescue nil %></td>
+    <td><%= computer.cd.model rescue nil %></td>
     <td><%= link_to 'Show', computer %></td>
     <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
     <td><%= link_to 'Destroy', computer, :confirm => 'Are you sure?', :method => :delete %></td>
