--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -2,4 +2,6 @@
   <li><a href="/computers">Computers</a></li>
   <li><a href="/mother_boards">Motherboards</a></li>
   <li><a href="/harddisks">Hardisks</a></li>
+  <li><a href="/memories">Memories</a></li>
+  <li><a href="/cds">Cds</a></li>
 </ul>
