- Partial and Views   * little changes and adds to give choice of election about     if the cd device can write cd or not

--- a/app/views/cds/index.html.erb
+++ b/app/views/cds/index.html.erb
@@ -5,6 +5,7 @@
   <tr>
     <td>Model</td>
     <td>SN</td>
+    <td>Burn</td>
     <td>Computer</td>
     <td colspan='3' align='center' >Actions</td>
   </tr>
@@ -12,6 +13,7 @@
   <tr>
     <td><%= cd.model %></td>
     <td><%= cd.serialnumber %></td>
+    <td><%= cd.writable %></td>
     <td><%= cd.computer.name rescue nil %></td>
     <td><%= link_to 'Show', cd %></td>
     <td><%= link_to 'Edit', edit_cd_path(cd) %></td>
