--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -6,6 +6,10 @@
   <%= f.label 'serialnumber' %>
   <%= f.text_field :serialnumber %>
 
+  Burn <%= radio_button('cd', 'writable', 't') %>
+  Not burn<%= radio_button('cd', 'writable', 'f') %>
+
+
   <%= collection_select 'cd', 'computer_id', Computer.find(:all), 'id', 'name',
       {:prompt => true} %>
   <p>
