- Model   * adatped model relationships
- View
  * adapted the index of computers

- Styles
  * added new class for li tag

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -18,8 +18,8 @@
     <td><%= computer.mac %></td>
     <td><%= computer.ip %></td>
     <td><%= computer.mother_board.title rescue nil %></td>
-    <td><%= computer.harddisk.model rescue nil %></td>
-    <td><%= computer.memory.model rescue nil %></td>
+    <td><%= computer.harddisk.collect {|x| x.model + '<br>' } rescue nil %></td>
+    <td><%= computer.memory.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= link_to 'Show', computer %></td>
     <td><%= link_to 'Edit', edit_computer_path(computer) %></td>
