--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -4,4 +4,5 @@
   <li><a href="/harddisks">Hardisks</a></li>
   <li><a href="/memories">Memories</a></li>
   <li><a href="/cds">Cds</a></li>
+  <li><a href="/dvds">Dvds</a></li>
 </ul>
