- Controllers   * added methods available and unavailable
- Model
  * added named scopes

- Views
  * added available and unavailable views

- Shared Partial
  * added submenu computer partial

- Routes
  * adapted routes

--- a/app/views/layouts/computers.html.erb
+++ b/app/views/layouts/computers.html.erb
@@ -11,6 +11,7 @@
 
 <p style="color: green"><%= flash[:notice] %></p>
 <%= render :partial => 'shared/menu' %>
+<%= render :partial => 'shared/submenu_computer' %>
 <%= yield  %>
 
 </body>
