- Controller   * added auto_complete_for method for searchs
- Partials
  * added search partial

- Views
  * modified views

- Styles
  * add class

- Routes
  * added new member in computer resource

- Vendor
  * added plugin auto_complete for search computers by name

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing computers</h1>
 
+<%= text_field_with_auto_complete :computer, :name, :limit => 15, :order => 'created_at DESC' %>
+
 <%= render :partial => 'list' %>
 
 <br />
