--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -1,2 +1,6 @@
+<% form_for :computer, :url => { :action => "auto_complete_for_computer_name" } do |f| %>
 Search for name:
 <%= text_field_with_auto_complete :computer, :name, :limit => 15, :order => 'created_at DESC' %>
+
+<%= submit_tag "Search" %>
+<% end %>
