--- a/app/views/computers/available.html.erb
+++ b/app/views/computers/available.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing computers</h1>
 
-<%= render :partial => 'search' %>
+<%= render :partial => 'search' %>k
 <%= render :partial => 'list' %>
 
 <br />
