- Controller   * change name method auto_complete_for_computer_name to search
- Partials
  * change the action auto_complete_for_computer_name to search in
    search partial

- View
  * added new view search

--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -1,4 +1,4 @@
-<% form_for :computer, :url => { :action => "auto_complete_for_computer_name" } do |f| %>
+<% form_for :computer, :url => { :action => "search" } do |f| %>
 Search for name:
 <%= text_field_with_auto_complete :computer, :name, :limit => 15, :order => 'created_at DESC' %>
 
