--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -1,6 +1,33 @@
-<% form_for :computer, :url => { :action => "search" } do |f| %>
-Search for name:
-<%= text_field_with_auto_complete :computer, :name, :limit => 15, :order => 'created_at DESC' %>
+<%= javascript_include_tag :defaults %>
 
-<%= submit_tag "Search" %>
+<table>
+<% form_tag :action => 'search' do %>
+
+  <tr>
+    <td><label>Name:</label></td>
+    <td><%= text_field_with_auto_complete :computer, :name, {}, {:method => :get} %></td>
+    <td><%= submit_tag "Search" %></td>
+
+
 <% end %>
+
+<% form_tag :action => 'search' do %>
+
+
+    <td><label>Ip:</label></td>
+    <td><%= text_field_with_auto_complete :computer, :ip, {}, {:method => :get} %></td>
+    <td><%= submit_tag "Search" %></td>
+
+
+<% end %>
+
+<% form_tag :action => 'search' do %>
+
+
+    <td><label>Mac:</label></td>
+    <td><%= text_field_with_auto_complete :computer, :mac, {}, {:method => :get} %></td>
+    <td><%= submit_tag "Search" %></td>
+  </tr>
+
+<% end %>
+</table>
