- Controllers   * little changes
- Views
  * little changes adapting to the new template

- Partial
  * little changes adapting to the new template

- Styles
  * added new style

- Public Image
  * added new public image

- Layout
  * adapted the layout to the new style

--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -1,19 +1,18 @@
-<table border='1' >
+<table>
   <tr>
-    <td>Pc</td>
-    <td>Mac</td>
-    <td>Ip</td>
-    <td>Available</td>
-    <td>MBoard</td>
-    <td>Harddisk</td>
-    <td>Memory</td>
-    <td>Cd</td>
-    <td>Dvd</td>
-    <td colspan='3'>Actions</td>
+    <th>Pc</th>
+    <th>Mac</th>
+    <th>Ip</th>
+    <th>Available</th>
+    <th>MBoard</th>
+    <th>Harddisk</th>
+    <th>Memory</th>
+    <th>Cd</th>
+    <th>Dvd</th>
+    <th colspan='3'>Actions</th>
   </tr>
-
 <% for computer in @computers %>
-  <tr>
+  <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= computer.name %></td>
     <td><%= computer.mac %></td>
     <td><%= computer.ip %></td>
