- Controllers   * added paginate in computers   * added auto complete callback and search method in     harddisks   * added paginate in motherboards
- Partials
  * new partials for harddisks

- Views
  * little changes in views

- Routes
  * added new routes for auto complete

- Layout
  * addapted hardisks layout to the new styles

--- a/app/views/harddisks/index.html.erb
+++ b/app/views/harddisks/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Listing harddisks</h1>
-
-<table border='1' >
+<table>
   <tr>
     <td>Model</td>
     <td>SN</td>
@@ -9,7 +7,7 @@
   </tr>
 
 <% for harddisk in @harddisks %>
-  <tr>
+  <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= harddisk.model %></td>
     <td><%= harddisk.serialnumber %></td>
     <td><%= harddisk.computer.name  rescue nil %></td>
