--- a/app/views/mother_boards/index.html.erb
+++ b/app/views/mother_boards/index.html.erb
@@ -1,13 +1,13 @@
 <table>
   <tr>
-    <td>Title</td>
-    <td>Serial Number</td>
-    <td>Computer</td>
-    <td colspan='3'>Actions</td>
+    <th>Title</th>
+    <th>Serial Number</th>
+    <th>Computer</th>
+    <th colspan='3'>Actions</th>
   </tr>
 
 <% for mother_board in @mother_boards %>
-  <tr>
+  <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= mother_board.title %></td>
     <td><%= mother_board.serialnumber %></td>
     <td><%= mother_board.computer.name rescue nil %></td>
