- Controller   * fixed some lines
- Views
  * added paginator in index view computers

- Styles
  * apply changes to auto complete input tags

--- a/app/views/harddisks/index.html.erb
+++ b/app/views/harddisks/index.html.erb
@@ -1,9 +1,9 @@
 <table>
   <tr>
-    <td>Model</td>
-    <td>SN</td>
-    <td>Computer</td>
-    <td colspan='3' align='center' >Actions</td>
+    <th>Model</th>
+    <th>SN</th>
+    <th>Computer</th>
+    <th colspan='3' align='center' >Actions</th>
   </tr>
 
 <% for harddisk in @harddisks %>
