--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -1,15 +1,13 @@
-<h1>Listing memories</h1>
-
-<table border='1' >
+<table>
   <tr>
-    <td>Model</td>
-    <td>SN</td>
-    <td>Computer</td>
-    <td colspan='3' align='center' >Actions</td>
+    <th>Model</th>
+    <th>SN</th>
+    <th>Computer</th>
+    <th colspan='3' align='center' >Actions</th>
   </tr>
 
 <% for memory in @memories %>
-  <tr>
+  <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= memory.model %></td>
     <td><%= memory.serialnumber %></td>
     <td><%= memory.computer.name rescue nil %></td>
