--- a/app/views/harddisks/index.html.erb
+++ b/app/views/harddisks/index.html.erb
@@ -1,23 +1,6 @@
-<table>
-  <tr>
-    <th>Model</th>
-    <th>SN</th>
-    <th>Computer</th>
-    <th colspan='3' align='center' >Actions</th>
-  </tr>
+<%= render :partial => 'list' %>
 
-<% for harddisk in @harddisks %>
-  <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= harddisk.model %></td>
-    <td><%= harddisk.serialnumber %></td>
-    <td><%= harddisk.computer.name  rescue nil %></td>
-    <td><%= link_to 'Show', harddisk %></td>
-    <td><%= link_to 'Edit', edit_harddisk_path(harddisk) %></td>
-    <td><%= link_to 'Destroy', harddisk, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
+<%= will_paginate @harddisks %>
 <br />
 
 <%= link_to 'New harddisk', new_harddisk_path %>
