--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -1,23 +1,6 @@
-<table>
-  <tr>
-    <th>Model</th>
-    <th>SN</th>
-    <th>Computer</th>
-    <th colspan='3' align='center' >Actions</th>
-  </tr>
+<%= render :partial => 'list' %>
 
-<% for memory in @memories %>
-  <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= memory.model %></td>
-    <td><%= memory.serialnumber %></td>
-    <td><%= memory.computer.name rescue nil %></td>
-    <td><%= link_to 'Show', memory %></td>
-    <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
-    <td><%= link_to 'Destroy', memory, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
+<%= will_paginate @memories %>
 <br />
 
 <%= link_to 'New memory', new_memory_path %>
