--- a/app/views/layouts/cds.html.erb
+++ b/app/views/layouts/cds.html.erb
@@ -29,15 +29,22 @@
           </div>
         </div>
         <div id="secondaryContent">
-          <% if controller.action_name != 'edit' && controller.action_name != 'show' %>
+          <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
+             controller.action_name != 'new' && controller.action_name != 'create' %>
           <div class="box boxB">
             <div class="boxContent">
               <%= render :partial => 'search' %>
             </div>
           </div>
+          <% else %>
+          <div class="box boxB">
+            <div class="boxContent">
+              <h2><%= controller.controller_name%> : <%= controller.action_name %></h2>
+            </div>
+          </div>
           <% end %>
         </div>
-        <div class="clear"></div>
+         <div class="clear"></div>
       </div>
       <div id="footer">
         <p>Copyleft. Designed by <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a></p>
