--- a/app/views/layouts/mother_boards.html.erb
+++ b/app/views/layouts/mother_boards.html.erb
@@ -28,11 +28,19 @@
             </div>
           </div>
         </div>
+
         <div id="secondaryContent">
-          <% if controller.action_name != 'edit' && controller.action_name != 'show' %>
+          <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
+             controller.action_name != 'new' && controller.action_name != 'create' %>
           <div class="box boxB">
             <div class="boxContent">
               <%= render :partial => 'search' %>
+            </div>
+          </div>
+          <% else %>
+          <div class="box boxB">
+            <div class="boxContent">
+              <h2><%= controller.controller_name%> : <%= controller.action_name %></h2>
             </div>
           </div>
           <% end %>
