- Controllers   * add new controller for marks
- Migrate
  * add new migrate for generation of marks table
  * add new migrate to add foreing key mark_id in tables

- Views and Partials
  * addapted to the new module added marks

- Routes
  * added new routes for mark model

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -12,6 +12,9 @@
 
   <%= collection_select 'cd', 'computer_id', Computer.find(:all), 'id', 'name',
       {:prompt => true} %>
+
+  <%= collection_select 'mother_board', 'mark_id', Mark.find(:all), 'id', 'name',
+      {:prompt => true} %>
   <p>
     <% if action_name == 'new' %>
     <%= f.submit "Create" %>
