--- a/app/views/layouts/mother_boards.html.erb
+++ b/app/views/layouts/mother_boards.html.erb
@@ -14,7 +14,7 @@
       <div id="menu">
         <ul>
           <li class="first">
-            <%= render :partial => 'shared/menu' %>
+            <%= render :partial => 'shared/top_menu' %>
           </li>
         </ul>
       </div>
@@ -45,6 +45,13 @@
           </div>
           <% end %>
         </div>
+        <div class="box">
+          <h3>Modules</h3>
+          <div class="boxContent">
+            <%= render :partial => 'shared/menu' %>
+          </div>
+        </div>
+      </div>
         <div class="clear"></div>
       </div>
       <div id="footer">
