--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -10,7 +10,7 @@
   <%= collection_select 'harddisk', 'computer_id', Computer.find(:all), 'id', 'name',
       {:prompt => true} %>
 
-  <%= collection_select 'mother_board', 'mark_id', Mark.find(:all), 'id', 'name',
+  <%= collection_select 'harddisk', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
   <p>
     <% if action_name == 'new' %>
