--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -2,6 +2,7 @@
   <tr>
     <th>Model</th>
     <th>Serial Number</th>
+    <th>Mark</th>
     <th>Pc</th>
     <th colspan='3'>Actions</th>
   </tr>
@@ -9,6 +10,7 @@
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= harddisk.model %></td>
     <td><%= harddisk.serialnumber %></td>
+    <td><%= harddisk.mark.name rescue nil  %></td>
     <td><%= harddisk.computer.name rescue nil  %></td>
     <td><%= link_to 'Show', harddisk %></td>
     <td><%= link_to 'Edit', edit_harddisk_path(harddisk) %></td>
