--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -2,6 +2,7 @@
   <tr>
     <th>Model</th>
     <th>Serial Number</th>
+    <th>Mark</th>
     <th>Pc</th>
     <th colspan='3'>Actions</th>
   </tr>
@@ -9,6 +10,7 @@
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= memory.model %></td>
     <td><%= memory.serialnumber %></td>
+    <td><%= memory.mark.name rescue nil  %></td>
     <td><%= memory.computer.name rescue nil  %></td>
     <td><%= link_to 'Show', memory %></td>
     <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
