--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -103,30 +103,6 @@ a:hover
     width: 100%;
 }
 
-#menu ul
-{
-    padding: 0em 0em 0em 12em;
-    list-style: none;
-}
-
-#menu li
-{
-    display: inline;
-    padding-right: 2em;
-    font-size: 1em;
-}
-
-#menu li a
-{
-    color: #fff;
-    background-color: inherit;
-}
-
-#menu li a:hover
-{
-    border-bottom: solid 1px #558800;
-}
-
 /* Content */
 
 #content
@@ -376,3 +352,70 @@ div.auto_complete ul strong.highlight {
     margin:0;
     padding:0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* MENUS */
+
+#marco {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    margin:30px 1px 1px 400px;
+    padding:0px;
+}
+
+.preload2
+.menu2 {padding:0; margin:0; margin-bottom:0; list-style:none; height:25px; background:red; position:relative; font-family:arial, verdana, sans-serif; }
+.menu2 li.top {display:block; float:left; position:relative;}
+.menu2 li a.top_link {display:block; float:left; height:25px; margin-left:6px; line-height:25px; color:#FFF; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
+.menu2 li a.top_link span {float:left; display:block; padding:0 10px 0 6px; height:40px;}
+.menu2 li a.top_link span.down {float:left; display:block; padding:0 10px 0 6px; height:25px;/*background:url(prodrop2/down.gif) no-repeat right top;*/}
+.menu2 li a.top_link:hover {color: white;}
+.menu2 li a.top_link:hover
+.menu2 li a.top_link:hover
+
+.menu2 li:hover > a.top_link {color:#555}
+.menu2 li:hover > a.top_link
+.menu2 li:hover > a.top_link
+
+
+.menu2 table {border-collapse:collapse; width:0; height:0; position:absolute; top:0; left:0;}
+
+/* Default link styling */
+
+/* Style the list OR link hover. Depends on which browser is used */
+
+.menu2 a:hover {visibility:visible;}
+.menu2 li:hover {position:relative; z-index:200;}
+
+/* keep the 'next' level invisible by placing it off screen. */
+.menu2 ul,
+.menu2 :hover ul ul,
+.menu2 :hover ul :hover ul ul,
+.menu2 :hover ul :hover ul :hover ul ul,
+.menu2 :hover ul :hover ul :hover ul :hover ul ul {position:absolute; left:-9999px; top:-9999px; width:0; height:0; margin:0; padding:0; list-style:none;}
+
+.menu2 :hover ul.sub {left:6px; top:25px; background: #fff; padding:0; /*border:1px solid #1E8BB5; white-space:nowrap;*/ width:auto; height:auto; font-weight:normal;}
+.menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000000; border-left:1px solid #000000; border-right:1px solid #000000; margin-bottom:0;}
+.menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000000; text-decoration:none;}
+.menu2 :hover ul.sub li a.fly {background:#fff  url(http://www.luisangelcamargo.com/wp-content/uploads/2007/12/vineta_menu.gif) no-repeat 150px 6px;}
+.menu2 :hover ul.sub li a:hover {background:#000000; color:#FFFFFF;}
+.menu2 :hover ul.sub li a.fly:hover {background:#000000; color:#FFFFFF;}
+.menu2 :hover ul li:hover > a.fly {background:white}
+
+.menu2 :hover ul :hover ul,
+.menu2 :hover ul :hover ul :hover ul,
+.menu2 :hover ul :hover ul :hover ul :hover ul,
+.menu2 :hover ul :hover ul :hover ul :hover ul :hover ul
+{left:160px; top:-1px; background: #fff; padding:0; /* white-space:nowrap; */width:auto; z-index:300; height:auto;}
+.menu2 :hover ul.sub li ul {border-top:1px solid #000000; background: #fff; z-index:300;}
