- Layout   * adapt layout marks to new css menu
- Menu
  * little changes in menu

--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -13,12 +13,47 @@
             <li><a href="/computers/new">New</a></li>
           </ul>
         </li>
-        <li><a href="/mother_boards">Motherboards</a></li>
-        <li><a href="/harddisks">Hardisks</a></li>
-        <li><a href="/memories">Memories</a></li>
-        <li><a href="/cds">Cds</a></li>
-        <li><a href="/dvds">Dvs</a></li>
+        <li><a href="/mother_boards" class="fly">Motherboards</a>
+          <ul>
+            <li><a href="/mother_boards">List</a></li>
+            <li><a href="/mother_boards/new">New</a></li>
+          </ul>
+        </li>
+        <li><a href="/harddisks" class="fly">Hardisks</a>
+          <ul>
+            <li><a href="/harddisks">List</a></li>
+            <li><a href="/harddisks/new">New</a></li>
+          </ul>
+        </li>
+        <li><a href="/memories" class="fly">Memories</a>
+          <ul>
+            <li><a href="/memories">List</a></li>
+            <li><a href="/memories/new">New</a></li>
+          </ul>
+        </li>
+        <li><a href="/cds" class="fly">Cds</a>
+          <ul>
+            <li><a href="/cds">List</a></li>
+            <li><a href="/cds/new">New</a></li>
+          </ul>
+        </li>
+        <li><a href="/dvds" class="fly">Dvs</a>
+          <ul>
+            <li><a href="/dvds">List</a></li>
+            <li><a href="/dvds/new">New</a></li>
+          </ul>
+        </li>
 
+      </ul>
+      <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+    </li>
+
+    <li class="top"><a href="#" id="telmex" class="top_link"><span class="down">Marks</span>
+        <!--[if gte IE 7]><!--></a><!--<![endif]-->
+      <!--[if lte IE 6]><table><tr><td><![endif]-->
+      <ul class="sub">
+        <li><a href="/marks">Lists</a></li>
+        <li><a href="/marks/new">New</a></li>
       </ul>
       <!--[if lte IE 6]></td></tr></table></a><![endif]-->
     </li>
