--- a/app/views/layouts/marks.html.erb
+++ b/app/views/layouts/marks.html.erb
@@ -12,11 +12,7 @@
   <body>
     <div id="outer">
       <div id="menu">
-        <ul>
-          <li class="first">
-            <%= render :partial => 'shared/top_menu' %>
-          </li>
-        </ul>
+        <%= render :partial => 'shared/new_menu' %>
       </div>
       <div id="content">
         <div id="primaryContentContainer">
@@ -44,13 +40,6 @@
           </div>
           <% end %>
         </div>
-        <div class="box">
-          <h3>Modules</h3>
-          <div class="boxContent">
-            <%= render :partial => 'shared/menu' %>
-          </div>
-        </div>
-      </div>
         <div class="clear"></div>
       </div>
       <div id="footer">
